--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.7.2",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "typescript": "^4.3.5"
   }
 }
